syntax = "proto3";

package repeated_packed;

message TestMessage {
    repeated uint64 x = 1;
}